Fixed key on mobile

--- a/styles.css
+++ b/styles.css
@@ -244,9 +244,16 @@ background-color: #a13b1a;
 
 #key{
     position: absolute;
-    max-width: 15%;
-    max-height: 20%;
+    max-width: 20%;
+    max-height: 25%;
     left: 15px;
     bottom: 15px;
 }
 
+@media screen and (max-width:700px)
+{
+    #key{
+    max-width: 100%;
+    max-height: 15%;
+    }
+}
